--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0a6f2f6dd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f76f84082d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0a6e4b9350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0a6e4b9550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f76f881c2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f76f881c4d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0a6ea61c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0a6ea61e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f76f8dcbc10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f76f8dcbe10&gt;]</pre>
 </div>
 
 </div>
