--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9d81e4ff50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f38baf6b590&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9d82419290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9d82419490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f38bac68390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f38bac68590&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9d829bcb50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9d829bcd50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f38bb210c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f38bb210e90&gt;]</pre>
 </div>
 
 </div>
