--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f54426a9650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f10950e2cd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5442685610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5442685810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f10956bb410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f10956bb610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5442c2ae90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5442c350d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1095cc29d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1095c63f10&gt;]</pre>
 </div>
 
 </div>
