--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe899f7cf10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5e82b6c950&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe899fa67d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe899fa69d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5e828dabd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5e828a3550&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe89a54af50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe89a558190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5e82e98450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5e82e46e50&gt;]</pre>
 </div>
 
 </div>
