--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f14ff31cf10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa23a922590&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f14ffc49650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f14ff8e3450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa23aeed7d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa23aeedf10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f14ffede410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f14ffe86cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa23af3d710&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa23b498fd0&gt;]</pre>
 </div>
 
 </div>
