--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f73fc342690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbd36b41ad0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f73fc8d4550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f73fc8d4790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbd367ab510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbd367ab710&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f73fce9ce10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f73fcea6090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbd36d51d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbd36d51f90&gt;]</pre>
 </div>
 
 </div>
