--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbd36b41ad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f45dc53d590&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbd367ab510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbd367ab710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f45dcb09510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f45dcb09710&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbd36d51d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbd36d51f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f45dd0afd90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f45dd0aff90&gt;]</pre>
 </div>
 
 </div>
