--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd60c5834d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc26df70510&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd60c26d850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd60c54d3d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc26e53cb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc26e53c690&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd60cb42c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd60caf3d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc26eaf4050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc26eaf4250&gt;]</pre>
 </div>
 
 </div>
