--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f291c4fd6d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8d5223ac90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f291c902490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f291c902690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8d51ebf310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8d51ebf510&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f291cec7dd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f291cec7fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8d52469b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8d52469d50&gt;]</pre>
 </div>
 
 </div>
