--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcbfeb4ab90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd70a8ceed0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcbfe844310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcbfe844550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd70a255550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd70a255790&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcbfede7b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcbfede7dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd70a7ffd50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd70a7fff90&gt;]</pre>
 </div>
 
 </div>
