--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f54fb157e10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f87d63a3ed0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f54fae31610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f54fae31810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f87d66bc3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f87d66bc610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f54fb3d8f10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f54fb3e5150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f87d6c5fc10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f87d6c5fe50&gt;]</pre>
 </div>
 
 </div>
