--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f87d63a3ed0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f52ec79b350&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f87d66bc3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f87d66bc610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f52ec41f410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f52ec41f610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f87d6c5fc10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f87d6c5fe50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f52ec9c1c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f52ec9c1e50&gt;]</pre>
 </div>
 
 </div>
