--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb2e00fea10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f83cbc13890&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb2e06c2450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb2e06c2650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f83cbd3cdd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f83cc01e7d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb2e0c6ad50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb2e0c6af50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f83cc603950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f83cc5cf0d0&gt;]</pre>
 </div>
 
 </div>
