--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd28c6f66d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5840c96f50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd261bf85d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd26189e6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5840fdf450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5840fdf650&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd261ebbf50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd261e64f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5841587c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5841587e50&gt;]</pre>
 </div>
 
 </div>
