--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5840c96f50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faa4f19aed0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5840fdf450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5840fdf650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7faa4ee70450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7faa4ee70690&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5841587c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5841587e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7faa4f412d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7faa4f412f90&gt;]</pre>
 </div>
 
 </div>
