--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fce9e615690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7346d3e850&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fce9df8c4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fce9df8c6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7346d5d490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7346d5d690&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fce9e52ee50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fce9e539090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7347302cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7347302ed0&gt;]</pre>
 </div>
 
 </div>
