--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0264a86f50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f045f4493d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f02646ea310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f02646ea510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f045f9f2490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f045f9f2690&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0264c92c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0264c92e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f045ffb3d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f045ffb3f50&gt;]</pre>
 </div>
 
 </div>
