--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f16afa4e4d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f042769f250&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f16af71b390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f16af71b590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0427c66690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0427c66890&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f16afcbcc50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f16afcbce50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f042820af10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0428217150&gt;]</pre>
 </div>
 
 </div>
